*******************************************************************************
* RECENT CHANGES
*******************************************************************************

=== 1.0.19 ===
* Refactoring and optimizations of the Expander module.

=== 1.0.18 ===
* Optimizations of compressor, expander and gate modules.
* Gate module now uses lsp-dsp-lib for low-level gain and curve optimizations.
* Updated module versions in dependencies.

=== 1.0.17 ===
* Updated module versions in dependencies.

=== 1.0.16 ===
* Using lsp-dsp-lib for compressor module optimizations.
* Added AutoGain module.
* Added LoudnessMeter module.
* Added broadcasting-related constants according to BS.1770-4 and BS.2051-3 specificaitons.
* Fixed band binding algorithm for dspu::FFTCrossover.
* Updated module versions in dependencies.

=== 1.0.15 ===
* Updated module versions in dependencies.

=== 1.0.14 ===
* Fixed several issues reported by PVS Studio static analyzer.
* Fixed band characteristics report for FFTCrossover.
* Fixed sidechain buffer cleanup issue when setting the same to the previous stereo mode.
* Updated module versions in dependencies.

=== 1.0.13 ===
* Added insert() method to dspu::Sample class that allows to insert some zeroed
  chunks to the sample at the specified position.
* Improved sidechain algorithm related to RMS refresh.
* Implemented linear-phase FFT crossover.
* Updated build scripts.
* Updated module versions in dependencies.

=== 1.0.12 ===
* Added support of high-precision oversampling routines to dspu::Oversampler module.
* Added functions for readinng current dspu::Oversampler setup.
* Added routines for converting music time signature to frequency/period.
* Implemented series of normalized LFO functions.
* Implemented dspu::RingBuffer class for processing the circular ring buffers.
* Added possibility to pass callback function do dspu::Oversampler as an alternative
  to the interface pointer.
* Updated design of the RLC bandpass filter.